--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 __pycache__
 *.zip
 *.dat
+Assignment2/Butterfly
+Assignment2/outputs
+Assignment2/1512.03385v1.pdf
+Assignment2/SAMPLE_TEST_DATA
+*.csv
+*.json
+Assignment2/seg_maps
+Assignment2/flat
+Assignment2/2024AIB2289_A2
